--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -19,6 +19,7 @@ spec:
         image: nkarwapanitech/panitech-class-docker:v1
         ports:
         - containerPort: 3000
+        imagePullPolicy: Always
         
         
 ---
